# llms-prompt-engineering

./: .env-template  README.md  pyproject.toml  setup.py
notebooks/workshop/: 02-example-chatbot.ipynb  03-example-entity-extraction.ipynb  04-example-summarization.ipynb  05-example-code-generator.ipynb  06-example-classification.ipynb  07-next-steps-fine-tuning.ipynb  08-prompting-techniques.ipynb  09-ReACT-agent.ipynb
